TestCases/ASTTests/SemanticErrorsTests/tests/test15.c

int main() {

int x = 5;

int x;
    return 0;

}
